...
  'forgot_password': 'Forgot Password',
  'current_password': 'Current Password',
  'current_password_required': 'Current Password is required',
  'new_password': 'New Password',
  'new_password_required': 'New Password is required',
  'enter_new_password': 'Enter your new Password',
  'change_password': 'Change Password',
  'signup_account': 'Sign Up Account',
  'name': 'Name',
  'firstname_required': 'First name is required',
  'lastname': 'Last name',
  'lastname_required': 'Last name is required',
  'enter_register_info': 'Enter your Information for Register',
...
  'register_success_for': 'Register Account created for',
  'register_failed': 'Register Account failed',
  'welcome_back': 'Welcome back',
  'not_approved': 'Not Approved',
  'not_approved_yet': 'You are not approved yet',
  'login_failed': 'Login failed. Please try again.',
  'approved': 'Approved',
  'approved_welcome': 'You are approved. Welcome',
  'request_failed': 'Request failed. Please try again.',
  'google_token_failed': 'Failed to get Google ID Token',
  'role': 'ROLE',
  'world_health_organization': 'World\nHealth Organization',
  'user_id_not_found': 'User ID not found',
  'validation_error': 'Validation Error',
  'check_required_fields': 'Please check all required fields',
  'save_profile': 'Save Profile',
  'profile_updated_for': 'Profile updated for',
  'no_reports_found': 'No reports found',
  'no_results_for': 'No results for',
  'clear_filters': 'Clear filters',
  'initial': 'Open',
  'visited_by_admin': 'Reviewed by administrator',
...
  'admin_close': 'Closed',
  'no_team': 'No team',
  'report_pdf': 'Report PDF',
  'search_by_doctor_team': 'Search by doctor or team name...',
  'filter_by_status': 'Filter by Status',
  'filter_by_type': 'Filter by Type',
  'clear_filters_button': 'Clear Filters',
  'take_photo': 'Take photo',
  'choose_from_gallery': 'Choose from gallery',
  'description': 'Description',
  'enter_description': 'Please enter description',
  'select_health_service': 'Please select a health service',
  'select_health_service_label': 'Select Health Service',
...
  'sync_complete': 'Sync Complete',
  'offline_synced': 'offline reports synced successfully',
  'error_during_sync': 'Error during sync:',
  'sync_error': 'Sync Error',
  'sync_failed': 'Failed to sync offline reports',
  'alert_detail': 'Alert Detail',
  'retry': 'Retry',
  'no_data_found': 'No data found',
  'alert_status': 'Alert Status',
  'track_id': 'Track ID',
  'alert_information': 'Alert Information',
  'alert_type': 'Alert Type',
  'created_date': 'Created Date',
...
  'location_description': 'Location Description',
  'attached_images': 'Attached Images',
  'status_history': 'Status History',
  'team_information': 'Team Information',
  'team_name': 'Team Name',
  'team_members': 'Team Members',
  "clear_all_filters": "Clear All Filters",
  "apply_filters": "Apply Filters",
  "filters": "Filters",
  "current_location": "Current Location",
  "your_current_position": "Your Current Position",
  "location_unavailable": "Location Unavailable",
  "current_location_not_available": "Current location is not available",
  "show_current_location": "Show Current Location",
  "hide_current_location": "Hide Current Location",
  "clear_selection": "Clear Selection",
  "map_instructions": "Instructions",
  "tap_map_to_select": "Tap on map to select location",
  "selected_coordinates": "Selected",
  "logout": "Logout",
  "confirm_logout": "Confirm Logout",
  "are_you_sure_logout": "Are you sure you want to logout?",
  "cancel": "Cancel",
  'no_users_found': 'No users found',
  'no_name': 'No name',
  'pending': 'Pending',
  'search_by_name_or_email': 'Search by name or email',
...
  'unknown': 'Unknown',
  'create_new_team': 'Create New Team',
  'enter_team_name': 'Enter team name',
  'team_services': 'Team Services',
  'select_members': 'Select Members',
  'create_team': 'Create Team',
  'admin': 'Admin',
  'doctor': 'Doctor',
  'service_provider': 'Service Provider',
  'team_created_successfully': 'Team created successfully',
  'team_name_required': 'Team name is required',
  'description_required': 'Description is required',
  'failed_to_get_users': 'Failed to get users',
...
  'enter_team_member_notes': 'Enter Team Member Notes',
  'update_alert': 'Update Alert',
  'end_processing': 'End Processing',
  'admin_notes': 'Admin Notes',
  'enter_admin_notes': 'Enter admin notes',
  'update_description': 'Update Description',
  'users_management': 'Users Management',
  'users_available': 'users available',
  'logged_out': 'Logged Out',
  'logged_out_successfully': 'Logged out successfully',
  'description_Admin': 'Admin Description',
  'description_ServiceProvider': 'Service Provider Description',
  'add_report': 'Add Report',
  'no_teams_found': 'No teams found',
...
  'reset_email_sent':
      'If the email is Confirmed, you will receive password reset instructions.',
  'invalid_email': 'Invalid email',
  'search_users': 'Search Users',
  'team_attached_images': 'Team Attached Images',
  'download': 'Download',
  'edit_profile': 'Edit Profile',
  'download_pdf_doctor': 'Download Medical Report',
  'download_pdf_service': 'Download Service Report',
  'items_per_page': 'Items per page',
  'showing': 'Showing',
  'of': 'of',
  'page': 'Page',
...
